--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,38 +1,24 @@
 {% extends "store/main.html" %}
 {% load static %}
 {% block content %}
-<div class="container">
+<div class="container" style="padding-top:20px">
     <div class="row">
+        {% for product in products %}
         <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/placeholder.png' %}" alt="product">
+            <img class="thumbnail" src="{{ product.imageURL }}" alt="product">
             <div class="box-element product">
-                <h6><strong>Product</strong></h6>
+                <h6><strong>{{product.name}}</strong></h6>
                 <hr>
-                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <button data-product="{{product.id}}" data-action="add"
+                    class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
                 <a class="btn btn-outline-success" href="">View</a>
-                <h4 style="display: inline-block; float: right">$20</h4>
+                <h4 style="display: inline-block; float: right"><strong>
+                        ${{product.price|floatformat:2}}
+                    </strong></h4>
             </div>
         </div>
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/placeholder.png' %}" alt="product">
-            <div class="box-element product">
-                <h6><strong>Product</strong></h6>
-                <hr>
-                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-                <a class="btn btn-outline-success" href="">View</a>
-                <h4 style="display: inline-block; float: right">$20</h4>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <img class="thumbnail" src="{% static 'images/placeholder.png' %}" alt="product">
-            <div class="box-element product">
-                <h6><strong>Product</strong></h6>
-                <hr>
-                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
-                <a class="btn btn-outline-success" href="">View</a>
-                <h4 style="display: inline-block; float: right">$20</h4>
-            </div>
-        </div>
+        {% endfor %}
+
     </div>
 </div>
 {% endblock content %}
