--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -11,10 +11,10 @@
                 <table class="table">
                     <tr>
                         <th>
-                            <h5>Items: <strong>3</strong></h5>
+                            <h5>Items: <strong>{{order.get_cart_items}}</strong></h5>
                         </th>
                         <th>
-                            <h5>Total: <strong>$42</strong></h5>
+                            <h5>Total: <strong>${{order.get_cart_total|floatformat:2}}</strong></h5>
                         </th>
                         <th>
                             <a style="float:right; margin:5px;" class="btn btn-success"
@@ -32,19 +32,23 @@
                     <div style="flex:1"><strong>Quantity</strong></div>
                     <div style="flex:1"><strong>Total</strong></div>
                 </div>
+                {% for item in items %}
                 <div class="cart-row">
-                    <div style="flex:2"><img class="row-image" src="{% static 'images/placeholder.png' %}" alt=""></div>
-                    <div style="flex:2">Product1</div>
-                    <div style="flex:1">$20</div>
+                    <div style="flex:2"><img class="row-image" src="{{ item.product.imageURL}}" alt=""></div>
+                    <div style="flex:2">{{item.product.name}}</div>
+                    <div style="flex:1">${{item.product.price|floatformat:2}}</div>
                     <div style="flex:1">
-                        <p class="quantity">2</p>
+                        <p class="quantity">{{item.quantity}}</p>
                         <div class="quantity">
-                            <img class="chg-quantity" src="{% static 'images/arrow-up.png' %}" alt="up">
-                            <img class="chg-quantity" src="{% static 'images/arrow-down.png' %}" alt="down">
+                            <img data-product="{{item.product.id}}" data-action="add" class="chg-quantity update-cart"
+                                src="{% static 'images/arrow-up.png' %}" alt="up">
+                            <img data-product="{{item.product.id}}" data-action="remove"
+                                class="chg-quantity update-cart" src="{% static 'images/arrow-down.png' %}" alt="down">
                         </div>
                     </div>
-                    <div style="flex:1">$32</div>
+                    <div style="flex:1">${{item.get_total|floatformat:2}}</div>
                 </div>
+                {% endfor %}
             </div>
         </div>
     </div>
