--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -6,7 +6,7 @@
         <div class="col-lg-6">
             <div class="box-element" id="form-wrapper">
                 <form id="form">
-                    <div class="user-info">
+                    <div id="user-info">
                         <div class="form-field">
                             <input required class="form-control" type="text" name="name" placeholder="Name..">
                         </div>
@@ -14,7 +14,7 @@
                             <input required class="form-control" type="email" name="email" placeholder="Email..">
                         </div>
                     </div>
-                    <div class="shipping-info">
+                    <div class="shipping-info" id="shipping-info">
                         <hr>
                         <div class="form-field">
                             <input class="form-control" type="text" name="address" placeholder="Address..">
@@ -32,13 +32,14 @@
                             <input class="form-control" type="text" name="country" placeholder="Country..">
                         </div>
                     </div>
+                    <hr>
+                    <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
                 </form>
-                <hr>
-                <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue">
             </div>
             <br>
             <div class="box-element hidden" id="payment-info">
                 <small>Paypal Options</small>
+                <button id="make-payment">Make Payment</button>
             </div>
         </div>
         <div class="col-lg-6">
@@ -47,17 +48,94 @@
                 <a class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Back to cart</a>
                 <hr>
                 <h3>Order Summary</h3>
+                {% for item in items %}
                 <div class="cart-row">
-                    <div style="flex:2"><img class="row-image" src="{% static 'images/placeholder.png' %}"></div>
-                    <div style="flex:2">Product 1</div>
-                    <div style="flex:1">$20</div>
-                    <div style="flex:1">x2</div>
+                    <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
+                    <div style="flex:2">{{item.product.name}}</div>
+                    <div style="flex:1">${{item.product.price}}</div>
+                    <div style="flex:1">{{item.quantity}}</div>
                 </div>
-                <h5>Items: 2</h5>
-                <h5>Total: $4</h5>
+                {% endfor %}
+                <h5>Items: {{order.get_cart_items}}</h5>
+                <h5>Total: ${{order.get_cart_total}}</h5>
             </div>
         </div>
     </div>
 </div>
 </div>
+<script>
+    var shipping = "{{order.shipping}}"
+    var total = "{{order.get_cart_total|floatformat:2}}"
+    var form = document.getElementById("form");
+
+    console.log(shipping)
+    if (shipping === "False") {
+        document.getElementById("shipping-info").innerHTML = ""
+    }
+
+    if (user != "AnonymousUser") {
+        document.getElementById("user-info").innerHTML = ""
+    }
+
+    if (shipping == "False" && user != "AnonymousUser") {
+        document.getElementById("form-wrapper").classList.add("hidden");
+        document.getElementById("payment-info").classList.remove("hidden")
+    }
+
+    form.addEventListener("submit", function (e) {
+        e.preventDefault()
+        document.getElementById("form-button").classList.add("hidden");
+        document.getElementById("payment-info").classList.remove("hidden")
+    })
+
+    document.getElementById("make-payment").addEventListener('click', function (e) {
+        submitFormData()
+    })
+
+    function submitFormData() {
+        console.log("Payment button clicked")
+
+        var userFormData = {
+            'name': null,
+            'email': null,
+            'total': total,
+        }
+
+        var shippingInfo = {
+            'address': null,
+            'city': null,
+            'state': null,
+            'zipcode': null,
+        }
+
+        if (shipping != "False") {
+            shippingInfo.address = form.address.value
+            shippingInfo.city = form.city.value
+            shippingInfo.state = form.state.value
+            shippingInfo.zipcode = form.zipcode.value
+        }
+
+        if (user == "AnonymousUser") {
+            userFormData.name = form.name.value
+            userFormData.email = form.email.value
+        }
+
+        var url = "/process_order/"
+        fetch(url, {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "X-CSRFToken": csrftoken,
+            },
+            body: JSON.stringify({ "form": userFormData, "shipping": shippingInfo }),
+        })
+            .then((response) => response.json())
+            .then((data) => {
+                console.log("Success:", data);
+                alert("Transaction Complete");
+                window.location.href = "{% url 'store' %}"
+            })
+    }
+
+</script>
 {% endblock content %}
