--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -8,6 +8,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <script>
+        var user = '{{request.user}}'
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie !== "") {
+                var cookies = document.cookie.split(";");
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + "=")) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue
+        }
+        var csrftoken = getCookie("csrftoken");
+    </script>
     <title>E-commerce</title>
 </head>
 
@@ -31,7 +50,7 @@
                     <a href="{% url 'cart'%}">
                         <img id="cart-icon" src="{% static 'images/cart.png' %}" alt="cart">
                     </a>
-                    <p id="cart-total">0</p>
+                    <p id="cart-total">{{cartItemsQuantity}}</p>
                 </div>
             </div>
         </div>
@@ -41,6 +60,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="{% static 'js/cart.js' %}"></script>
 </body>
 
 </html>
