--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -133,6 +133,8 @@
             .then((data) => {
                 console.log("Success:", data);
                 alert("Transaction Complete");
+                cart = {}
+                document.cookie = "cart=" + JSON.stringify(cart) + ";domain=;path=/"
                 window.location.href = "{% url 'store' %}"
             })
     }
