--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <script>
         var user = '{{request.user}}'
-        function getCookie(name) {
+        function getTokenCookie(name) {
             var cookieValue = null;
             if (document.cookie && document.cookie !== "") {
                 var cookies = document.cookie.split(";");
@@ -25,7 +25,32 @@
             }
             return cookieValue
         }
-        var csrftoken = getCookie("csrftoken");
+        var csrftoken = getTokenCookie("csrftoken");
+
+        function getCookie(name) {
+            // Split cookie string and get all individual name=value pairs in an array
+            var cookieArr = document.cookie.split(";");
+
+            // loop through the array element
+            for (var i = 0; i < cookieArr.length; i++) {
+                var cookiePair = cookieArr[i].split("=");
+                // Removing whitespace at the beginning of the cookie name
+                // and compare it with the given string 
+                if (name == cookiePair[0].trim()) {
+                    // Decode the cookie value and return 
+                    return decodeURIComponent(cookiePair[1]);
+                }
+            }
+            // return null if not found
+            return null;
+        }
+        var cart = JSON.parse(getCookie("cart"))
+        if (cart == undefined) {
+            cart = {}
+            console.log("cart created")
+            document.cookie = "cart" + JSON.stringify(cart) + ";domain=;path=/"
+        }
+        console.log("cart:", document.cookie)
     </script>
     <title>E-commerce</title>
 </head>
@@ -50,7 +75,7 @@
                     <a href="{% url 'cart'%}">
                         <img id="cart-icon" src="{% static 'images/cart.png' %}" alt="cart">
                     </a>
-                    <p id="cart-total">{{cartItemsQuantity}}</p>
+                    <p id="cart-total">{{cart_items_quantity}}</p>
                 </div>
             </div>
         </div>
